--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,8 +4,8 @@ name: Checks
 
 on: [push]
 
-jobs: 
-  test-lint: 
+jobs:
+  test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
@@ -14,11 +14,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Ckeckout
+      - name: Checkout
         uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
-
-
